package edu.hitsz.prop;

public class BombSupply extends AbstractProp{
    public BombSupply(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
