package edu.hitsz.prop;

public interface ExplodeObject {
    /**
     * 爆炸
     */
    void explode();
}
